styles/styles.css
/*
based on:
https://github.com/hypertexthero/typography/blob/master/style.css (Public Domain)

some inspiration from yahoo’s: http://purecss.io/, in particular:http://purecss.io/layouts/side-menu/
*/

body{
  width:100%;
  margin:0;
  padding:0;
}

#layoutWrapper{
  padding:0;
  margin:0;
  width:100%; /*important for responsive display,  breakpoint switches this for :auto*/
}

#main, section.level1 { /*main for html, section.level1 for epub*/
  font-family:sans-serif;
  font-size:110%;
  line-height:1.6em;
  margin:0;
  padding:1em;
  margin:auto;
  width:auto;
  max-width:40em;
  max-width:40rem;
  color:rgb(20, 20, 20);
}

body>h1, body>h2, body>h3, body>p{/*epub titlepage*/
  padding-left:20px;
  padding-right:20px;
}


#main h1,h2,h3,h4, p, figure, img{
  max-width:100%;
}

a {outline:none !important; font-weight:normal; text-decoration:underline;}
a:link {color:#51739a;}
a:visited {color:#606;}
a:hover {color:#606;}
a:active {color:#900; outline:none;}


h1 a:hover,h2 a:hover,h3 a:hover,h4 a:hover,h5 a:hover{
  text-decoration:underline;
}

h1,h2,h3,h4,h5,h6{
  line-height:1.1em;
}

h1.title{
  font-size: 400%;
  text-transform: uppercase;
  color: #396ba5;
  font-weight: normal;
  margin-top:0em;
}

h1 {
  font-size:280%;
  margin:2.5em 0 0.4em;
  font-weight: normal;
}

section:first-child h1:first-child{
  margin-top:0.5em; /*if the h1 is at the top, then remove the spaceing*/
}

h2 {
  font-weight:normal;
  font-size:180%;
  margin:2em 0 0.4em;
}

h3 {
  font-weight:normal;
  text-transform:normal;
  font-size:150%;
  margin:2em 0 0.4em;
  color:#5f5e5e;
}

h4 {
  font-weight:normal;
  font-size:120%;
  letter-spacing:0.1em;
  margin:1.5em 0 0.4em;
  color:#5f5e5e;
}

h5 {
  font-weight:normal;
  font-style:italic;
  font-size:100%;
  margin:1.5em 0 0.4em;
  color:#5f5e5e;
}

h6 {
  font-weight:bold;
  font-size:90%;
  letter-spacing:0.1em;
  margin:1.5em 0 0.4em;
}

a.link-to-self{
  font-size: 0.8em;
  margin-left: 1em;
  color: rgb(57, 107, 165);
  opacity:0.0;
  text-decoration:none;
}

*:hover > a.link-to-self{
  opacity:0.5;
}

a.link-to-self:hover{
  opacity:0.7;
  text-decoration:none;
}

p {
  text-align:left;
  font-size:100%;
  margin:1em 0 0;
}

p + p {
  margin:0;
  text-indent:1.5em;
}

h1+h2, h2+h3, h3+h4{
  margin-top:0.7em;
}


p + ul, p + ol, p + dl {margin-bottom:1.5em;}

blockquote, .example {
  border-left:2px solid #eee;
  padding-left:1.5em;
  margin:1em 0;
  color:#5a5a5a;
  font-family:serif;
  font-style: italic
}

blockquote small, .example small {
  display:block;
  line-height:1.7em;
}

.example p+p, blockquote p+p{
  margin-top: 1em;
  text-indent:0em;
}

.figure, figure{
  background-color: rgb(255, 255, 255);
  margin: 1em 0 1em 0px;
  box-sizing: border-box;
}

.figure>img, figure>img {
  width: 100%;
  display: block;
  border-bottom: 1px solid rgb(222, 222, 222);

}

.figure>.caption, figure>figcaption, .gallery>.caption {
  color: #5b5b5b;
  font-size: 80%;
  margin: 0.33em 0 0 0;
  width: 100%;
  padding-left:0em;
  line-height: 1.45em;
  font-family:sans-serif;
  font-style:normal
}

.gallery{
  margin: 1em 0 1em 0px;
  width:100%;
}

.gallery > img, .gallery > figure{
  border-right: solid 0.25em transparent;
  margin-bottom:0.25em;
  display: inline-block;
  vertical-align: top;
}

.gallery > figure> figcaption{
  padding-right: 1em;
}

.gallery.two > img, .gallery.two > figure{
  width: 49%;
}

.gallery.three > img, .gallery.three > figure{
  width:32%;
}

.gallery.four > img, .gallery.four > figure{
  width:24%;
}

ul, ol, dl {
  text-align:left;
  padding-left:1.5em;
}

ul li{
  list-style-type: square;
}

dt{
  font-style: italic;
}

dd>p{
  margin-top:0;
}

code {
  font-family:courier, monospace;
}

p > code {
  padding:0.25em;
  background:#eee;
}

pre {
  text-align:left;
  font-size:100%;
}

hr {
  height: 0;
  border: none; /*avoids double border*/
  margin: 2em auto;
  width: 20%;
  border-bottom: 1px solid rgb(207, 207, 207);
}

.footnotes hr{ /*soo footnotes are seperate by a larger seperator*/
  width: 100%;
}

.normal {font-weight:normal;}
.quiet {color:#999;}
.pull-left {float:left; margin:0.5em 2em 1em 0;}
.pull-right {float:right; margin:0.5em 0 1em 2em;}

@media (min-width: 60rem) {  /*calculated breakpoint: text width= 40rem + 2*1rem padding + 18rem menu width; */
  #layoutWrapper{
  width:auto; /*if viewport is wider than 60rem: auto, otherwise 100% (see above)*/
  }
}

